# ynab-report

./: .gitignore  .pre-commit-config.yaml  MIGRATION_TO_UV.md  README.md  app.py  deploy_modal.sh  pyproject.toml  sqlmesh_modal_debug_analysis.md
.github/workflows/: deploy.yml
dashboards/: .gitignore  degit.json
dashboards/.evidence/customization/: .profile.json
dashboards/pages/: monthly.md  yearly.md
dashboards/sources/ynab_report/: connection.yaml  monthly_level_dashboard.sql  yearly_level_dashboard.sql
src/etl/: etl.py  t.py
src/sheets/: batcher.py  refresh_sheets.py  sheet_formats.py  utils.py
src/sheets/assets/formatting_configs/: overview_dashboard_format.json  overview_notes.json  yearly_categories_dashboard_format.json  yearly_categories_notes.json
src/utils/: db_connection.py  s3_utils.py
src/warehouse/: 0_create_raw_tables.sql  1_create_cleaned_tables.sql  2_create_final_tables.sql  3_create_dashboards.sql  create_warehouse.py
src/warehouse/sqlmesh_project/: config.py
src/warehouse/sqlmesh_project/audits/: paystubs_earnings_components_sum_to_total.sql  paystubs_net_pay_plus_deductions_equals_earnings.sql  paystubs_post_tax_components_sum_to_total.sql  paystubs_pre_tax_components_sum_to_total.sql  paystubs_tax_components_sum_to_total.sql
src/warehouse/sqlmesh_project/macros/: datatypes.py  get_s3_path.py
src/warehouse/sqlmesh_project/models/_1_raw/: accounts.sql  category_groups.sql  category_orders.py  monthly_categories.sql  paystubs.sql  subtransactions.sql  transactions.sql
src/warehouse/sqlmesh_project/models/_2_cleaned/: accounts.sql  categories.sql  category_groups.sql  category_orders.sql  monthly_categories.sql  paystubs.sql  sub_transactions.sql  transactions.sql
src/warehouse/sqlmesh_project/models/_3_combined/: budgeted.sql  monthly_category_groups.sql  monthly_level.sql  monthly_paystubs.sql  monthly_transactions.sql  paystubs.sql  record_spine.sql  transactions.sql  yearly_budgeted.sql
src/warehouse/sqlmesh_project/models/_4_dashboards/: monthly_level.sql  yearly_category_group.sql  yearly_category_level.sql  yearly_level.sql  yearly_needs.sql  yearly_other.sql  yearly_paychecks.sql  yearly_subcategory_group.sql  yearly_wants.sql
tests/: test_batcher.py
transform/: 0_create_raw_tables.sql  1_create_cleaned_tables.sql  2_create_final_tables.sql  3_create_dashboards.sql  create_warehouse.py
utils/: db_connection.py  logging_config.py  s3_utils.py
ynab_etl/: etl.py
