[tool.poetry]
name = "ynab-report"
version = "0.1.0"
description = ""
authors = ["Ethan Fuerst <34084535+ethanfuerst@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ynab_report"}]

[tool.poetry.dependencies]
python = "^3.10"
ynab = "^1.0.1"
poetry-dotenv-plugin = "^0.2.0"
certifi = "^2024.12.14"
urllib3 = "^2.3.0"
pandas = "^2.2.3"
modal = "^0.72.33"
duckdb = "^1.1.3"
sqlfluff = "^3.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true

[tool.sqlfluff]
dialect = "duckdb"
max_line_length = 80
indent_unit = "tab"
tab_space_size = 4
capitalization_policy = "lower"
extended_capitalisation_policy = "lower"
preferred_type_casting_style = "shorthand"
exclude_rules = "LT05, LT09, ST05"

[tool.sqlfluff.layout.type.comma]
line_position = "leading"

[tool.sqlfluff.rules.layout.long_lines]
max_line_length = 80

[tool.sqlfluff.rules.layout.select_targets]
line_position = "leading"

[tool.sqlfluff.rules.structure.subquery]
forbid_subquery_in = "both"
