[tool.poetry]
name = "ynab-report"
version = "0.1.0"
description = ""
authors = ["Ethan Fuerst <34084535+ethanfuerst@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
poetry-dotenv-plugin = "^0.2.0"
certifi = "^2024.12.14"
urllib3 = "^2.3.0"
pandas = "^2.2.3"
modal = "^0.72.33"
duckdb = "^1.1.3"
sqlfluff = "^3.3.0"
gspread = "^6.1.4"
gspread-formatting = "^1.2.0"
emoji = "^2.14.1"
sqlmesh = {extras = ["web"], version = "^0.186.1"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
